<resources>
    <string name="app_name">SelfEmot</string>
    <string name="image_to_be_processed">Image to be Processed</string>
    <string name="click_a_pic_to_continue">Click a Pic to Continue!</string>
    <string name="image">Image</string>
    <string name="go">GO!</string>
    <string name="setting_fab">Setting Fab</string>
    <string name="pick_an_image_from_gallery"> Or pick an image from Gallery</string>
</resources>
